--- a/web/checkout.html
+++ b/web/checkout.html
@@ -363,6 +363,7 @@
 
     <!-- Template Javascript -->
     <script type="module" src="js/checkOut/checkmain.js"></script>
+    <script src="js/Home/home.js" type="module"></script>
 </body>
 
 </html>
