--- a/web/shop.html
+++ b/web/shop.html
@@ -374,6 +374,7 @@
     <script src="./js/shop/shop.js" type="module"></script>
     <script src="./js/shop/filters.js" type="module"></script>
     <script src="./js/cart/cart.js" type="module"></script>
+    <script src="js/Home/home.js" type="module"></script>
 </body>
 
 </html>
