--- a/web/checkout.html
+++ b/web/checkout.html
@@ -127,7 +127,7 @@
                           >0</span
                         >
                       </a>
-                      <a href="" class="btn px-0 ml-3">
+                      <a href="cart.html"  class="btn px-0 ml-3">
                         <i class="fas fa-shopping-cart text-primary"></i>
                         <span
                           class="badge text-secondary border border-secondary rounded-circle cartspan"
