--- a/web/shop.html
+++ b/web/shop.html
@@ -24,7 +24,7 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet" />
+    <link href="css/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -62,75 +62,77 @@
     <!-- Navbar Start -->
     <div class="container-fluid bg-dark mb-30">
         <div class="row px-xl-5">
-            <div class="col-lg-3 d-none d-lg-block">
-                <a class="btn d-flex align-items-center justify-content-between bg-primary w-100" data-toggle="collapse"
-                    href="#navbar-vertical" style="height: 65px; padding: 0 30px;">
-                    <h6 class="text-dark m-0"><i class="fa fa-bars mr-2"></i>Categories</h6>
-                    <i class="fa fa-angle-down text-dark"></i>
-                </a>
-                <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 bg-light"
-                    id="navbar-vertical" style="width: calc(100% - 30px); z-index: 999;">
-                    <div class="navbar-nav w-100">
-                        <div class="nav-item dropdown dropright">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dresses <i
-                                    class="fa fa-angle-right float-right mt-1"></i></a>
-                            <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
-                                <a href="" class="dropdown-item">Men's Dresses</a>
-                                <a href="" class="dropdown-item">Women's Dresses</a>
-                                <a href="" class="dropdown-item">Baby's Dresses</a>
-                            </div>
-                        </div>
-                        <a href="" class="nav-item nav-link">Shirts</a>
-                        <a href="" class="nav-item nav-link">Jeans</a>
-                        <a href="" class="nav-item nav-link">Swimwear</a>
-                        <a href="" class="nav-item nav-link">Sleepwear</a>
-                        <a href="" class="nav-item nav-link">Sportswear</a>
-                        <a href="" class="nav-item nav-link">Jumpsuits</a>
-                        <a href="" class="nav-item nav-link">Blazers</a>
-                        <a href="" class="nav-item nav-link">Jackets</a>
-                        <a href="" class="nav-item nav-link">Shoes</a>
+          <div class="col-lg-3 d-none d-lg-block">
+            <a class="btn d-flex align-items-center justify-content-between bg-primary w-100" data-toggle="collapse"
+              href="#navbar-vertical" style="height: 65px; padding: 0 30px">
+              <h6 class="text-dark m-0">
+                <i class="fa fa-bars mr-2"></i>Categories
+              </h6>
+              <i class="fa fa-angle-down text-dark"></i>
+            </a>
+            <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 bg-light"
+              id="navbar-vertical" style="width: calc(100% - 30px); z-index: 999">
+              <div class="navbar-nav w-100">
+                <div class="nav-item dropdown dropright">
+                  <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dresses <i
+                      class="fa fa-angle-right float-right mt-1"></i></a>
+                  <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
+                    <a href="" class="dropdown-item">Men's Dresses</a>
+                    <a href="" class="dropdown-item">Women's Dresses</a>
+                    <a href="" class="dropdown-item">Baby's Dresses</a>
+                  </div>
+                </div>
+                <a href="" class="nav-item nav-link">Shirts</a>
+                <a href="" class="nav-item nav-link">Jeans</a>
+                <a href="" class="nav-item nav-link">Swimwear</a>
+                <a href="" class="nav-item nav-link">Sleepwear</a>
+                <a href="" class="nav-item nav-link">Sportswear</a>
+                <a href="" class="nav-item nav-link">Jumpsuits</a>
+                <a href="" class="nav-item nav-link">Blazers</a>
+                <a href="" class="nav-item nav-link">Jackets</a>
+                <a href="" class="nav-item nav-link">Shoes</a>
+              </div>
+            </nav>
+          </div>
+          <div class="col-lg-9">
+            <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 py-lg-0 px-0">
+              <a href="" class="text-decoration-none d-block d-lg-none">
+                <span class="h1 text-uppercase text-dark bg-light px-2">Multi</span>
+                <span class="h1 text-uppercase text-light bg-primary px-2 ml-n1">Shop</span>
+              </a>
+              <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                <div class="navbar-nav mr-auto py-0">
+                  <a href="index.html" class="nav-item nav-link">Home</a>
+                  <a href="shop.html" class="nav-item nav-link">Shop</a>
+                  <a href="checkout.html" class="nav-item nav-link">Checkout</a>
+                </div>
+                <div class="navbar-nav ml-auto py-0 d-none d-lg-block">
+                  <a href="" class="btn px-0">
+                    <i class="fas fa-heart text-primary"></i>
+                    <span class="badge text-secondary border border-secondary rounded-circle heartspan"
+                      style="padding-bottom: 2px">0</span>
+                  </a>
+                  <a href="cart.html"  class="btn px-0 ml-3">
+                    <i class="fas fa-shopping-cart text-primary"></i>
+                    <span class="badge text-secondary border border-secondary rounded-circle cartspan"
+                      style="padding-bottom: 2px">0</span>
+                  </a>
+                  <a href="#" class="btn px-0 ml-3 position-relative" id="userDrop">
+                    <i class="fas fa-user text-primary user-icon"></i>
+                    <div id="dropLogin" class="nested-user-list position-absolute d-none">
+                      <a href="/signin.html">Sign In</a>
+                      <a href="/signup.html">Sign Up</a>
                     </div>
-                </nav>
-            </div>
-            <div class="col-lg-9">
-                <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 py-lg-0 px-0">
-                    <a href="" class="text-decoration-none d-block d-lg-none">
-                        <span class="h1 text-uppercase text-dark bg-light px-2">Multi</span>
-                        <span class="h1 text-uppercase text-light bg-primary px-2 ml-n1">Shop</span>
-                    </a>
-                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <div class="navbar-nav mr-auto py-0">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
-                            <a href="shop.html" class="nav-item nav-link">Shop</a>
-                            <a href="checkout.html" class="nav-item nav-link">Checkout</a>
-                        </div>
-                        <div class="navbar-nav ml-auto py-0 d-none d-lg-block">
-                            <a href="" class="btn px-0">
-                                <i class="fas fa-heart text-primary"></i>
-                                <span class="badge heartspan text-secondary border border-secondary rounded-circle"
-                                    style="padding-bottom: 2px">0</span>
-                            </a>
-                            <a href="" class="btn px-0 ml-3">
-                                <i class="fas fa-shopping-cart text-primary"></i>
-                                <span class="badge cartspan text-secondary border border-secondary rounded-circle"
-                                    style="padding-bottom: 2px">0</span>
-                            </a>
-                            <a href="#" class="btn px-0 ml-3 position-relative" id="userDrop">
-                                <i class="fas fa-user text-primary user-icon"></i>
-                                <div id="dropLogin" class="nested-user-list position-absolute d-none">
-                                  <a href="/signin.html">Sign In</a>
-                                  <a href="/signup.html">Sign Up</a>
-                                </div>
-                              </a>
-                        </div>
-                    </div>
-                </nav>
-            </div>
+                  </a>
+                </div>
+              </div>
+            </nav>
+          </div>
         </div>
-    </div>
+      </div>
     <!-- Navbar End -->
 
 
@@ -242,26 +244,26 @@
                         </div>
                         <div
                             class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="size-1">
+                            <input type="checkbox" class="custom-control-input size-filter xs" id="size-1">
                             <label class="custom-control-label" for="size-1">XS</label>
                         </div>
                         <div
                             class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="size-2">
+                            <input type="checkbox" class="custom-control-input size-filter s" id="size-2">
                             <label class="custom-control-label" for="size-2">S</label>
                         </div>
                         <div
                             class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="size-3">
+                            <input type="checkbox" class="custom-control-input size-filter m" id="size-3">
                             <label class="custom-control-label" for="size-3">M</label>
                         </div>
                         <div
                             class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="size-4">
+                            <input type="checkbox" class="custom-control-input  size-filter l" id="size-4">
                             <label class="custom-control-label" for="size-4">L</label>
                         </div>
                         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-                            <input type="checkbox" class="custom-control-input" id="size-5">
+                            <input type="checkbox" class="custom-control-input  size-filter xl" id="size-5">
                             <label class="custom-control-label" for="size-5">XL</label>
                         </div>
                     </form>
@@ -274,7 +276,6 @@
             <!-- Shop Product Start -->
             <div class="col-lg-9 col-md-8">
                 <div class="row pb-3 products-container">
-
                 </div>
             </div>
             <!-- Shop Product End -->
@@ -370,11 +371,10 @@
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-    
     <script src="./js/shop/shop.js" type="module"></script>
     <script src="./js/shop/filters.js" type="module"></script>
     <script src="./js/cart/cart.js" type="module"></script>
-    <script src="js/Home/home.js" type="module"></script>
+    <script src="./js/Home/home.js" type="module"></script>
 </body>
 
 </html>
